# fred-pop-gen

./: README.md  main.py  pyproject.toml
fred_pop_gen/: config.py  constants.py  task_1_read_input_files.py  task_2_assign_enrollment.py  task_3_assign_schools.py  task_assign_enrollment.py  task_assign_schools.py  task_filter_input_by_county.py  task_generate_enrollment_proportions.py  task_read_input_files.py  utils.py
src/fred_pop_gen/: config.py  constants.py  task_assign_enrollment.py  task_assign_schools.py  task_assign_workplaces.py  task_collect_output_by_county.py  task_download_lodes_data.py  task_filter_input_by_county.py  task_generate_employment_proportions.py  task_generate_enrollment_proportions.py  task_merge_p_hh_df.py  task_read_input_files.py  utils.py
