[project]
name = "fred-pop-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.2.3",
  "pandas>=2.2.3",
  "pyarrow>=19.0.1",
  "pytask>=0.5.2",
  "pytask-parallel>=0.5.1",
  "requests>=2.32.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
